[tool.poetry]
name = "cambio"
version = "0.1.0"
description = "The best card game"
authors = ["James Oswald <james.oswald@dynotx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {extras = ["srv"], version = "^4.2.0"}
fastapi = "*"


[tool.poetry.scripts]
start = "app:main"


[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
